metadata/force-app/main/default/objects/CustomName_dtJQD__c/CustomName_dtJQD__c.object-meta.xml
<CustomObject>
    <description>Description_RfvBR</description>
    <label>CustomLabel_MmzWK</label>
    <nameField>
        <label>CustomLabel_MmzWK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MmzWKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>