metadata/force-app/main/default/objects/CustomName_dtJQD__c/fields/CustomField_tvdqj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_tvdqj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldeHZbS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>