metadata/force-app/main/default/objects/CustomName_dtJQD__c/fields/CustomField_zCoXg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_zCoXg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRIjFY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>